# hal_embedded_mcp_release

./: README.md
docs/: INTEGRATION_WITH_SIMULATOR_AND_DIGITAL_TWIN.md  V1_RELEASE.md
gpio_driver/: CMakeLists.txt  DEVELOPER_GUIDE.md  README.md
gpio_driver/docs/: ONBOARDING_CHECKLIST.md
gpio_driver/examples/avr/: CMakeLists.txt  README.md  build_log.txt
gpio_driver/examples/avr/build_cmake/: CMakeCache.txt  cmake_install.cmake
gpio_driver/examples/common/: app_main.c
gpio_driver/examples/pc/: Makefile
gpio_driver/examples/stm32/: README.md
gpio_driver/gpio_driver/: ARCHITECTURE.md  common.h  gpioLib.c  gpioLib.h
gpio_driver/gpio_driver/config/: gpio_config.c  gpio_config.h
gpio_driver/gpio_driver/docs/: ANALYSIS_REPORT.md  ONBOARDING_GUIDE.md
gpio_driver/gpio_driver/examples/: README.md
gpio_driver/gpio_driver/examples/avr/: Makefile  build.bat  build.sh  config.json  flash.bat  flash.sh
gpio_driver/gpio_driver/examples/avr/build_cmake/: Makefile
gpio_driver/gpio_driver/examples/pc/: CMakeLists.txt  README.md  build_log.txt  config.json
gpio_driver/gpio_driver/examples/stm32/: Makefile
gpio_driver/gpio_driver/helpers/: gpio_helper.c
gpio_driver/gpio_driver/implementations/arduino/: gpioPlatform_arduino.c  gpioPlatform_arduino.h
gpio_driver/gpio_driver/implementations/avr/: gpioPlatform_avr.c
gpio_driver/gpio_driver/implementations/pc/: gpioLib_http.c  gpioLib_windows.h  platform_adapter.c
gpio_driver/gpio_driver/implementations/stm32/: gpioPlatform_stm32.c  gpioPlatform_stm32.h
gpio_driver/gpio_driver/scripts/: gen_config.py
gpio_driver/helpers/: gpio_helper.h
gpio_driver/implementations/avr/: gpioPlatform_avr.h  platform_adapter.c  uart_line_callback.h
gpio_driver/implementations/pc/: gpioLib_http.h  gpioLib_windows.c
gpio_driver/implementations/stm32/: platform_adapter.c
hal_embedded_mcp/: CHAT_PROMPT.md  QUICKSTART.md  README.md
hal_embedded_mcp/config/: config.json
hal_embedded_mcp/docs/: OVERVIEW.md  SAFETY_AND_VALIDATION.md
hal_embedded_mcp/hal_embedded_mcp/: ARCHITECTURE.md  CHANGELOG.md  QUICKSTART.md  README.md
hal_embedded_mcp/hal_embedded_mcp/config/: README.md
hal_embedded_mcp/hal_embedded_mcp/docs/: NATURAL_LANGUAGE_EXAMPLES.md
hal_embedded_mcp/hal_embedded_mcp/mcu/avr/: README.md  build.sh  flash.sh
hal_embedded_mcp/hal_embedded_mcp/mcu/avr/build_cmake/: CMakeCache.txt  Makefile  avr_toolchain_found.cmake  cmake_install.cmake  hal_mcp_avr.elf  hal_mcp_avr.hex  mcp_pins_gen.c
hal_embedded_mcp/hal_embedded_mcp/mcu/common/: README.md
hal_embedded_mcp/hal_embedded_mcp/scripts/: example_complex_blink.py
hal_embedded_mcp/hal_embedded_mcp/server/: requirements.txt  run_server.py
hal_embedded_mcp/mcu/: tool_handlers_gpio.c  tool_registry.h
hal_embedded_mcp/mcu/avr/: CMakeLists.txt  build.bat  flash.bat
hal_embedded_mcp/mcu/avr/build_cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  gpio_config_gen.c
hal_embedded_mcp/mcu/common/: app_main.c
hal_embedded_mcp/mcu/pc/: CMakeLists.txt
hal_embedded_mcp/mcu/stm32/: CMakeLists.txt
hal_embedded_mcp/scripts/: gen_mcp_from_config.py
hal_embedded_mcp/server/: README.md
helper_utils/: helper_common.c  serial_bridge.py
helper_utils/helper_utils/: helper_common.h
logging_driver/: CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  common.h
logging_driver/implementations/: logPlatform_arduino.h  logPlatform_avr.c  logPlatform_console.h
logging_driver/logging_driver/: logLib.c  logLib.h
logging_driver/logging_driver/examples/: example_main.c
logging_driver/logging_driver/implementations/: logPlatform_arduino.c  logPlatform_avr.h  logPlatform_console.c  logPlatform_file.c  logPlatform_file.h  logPlatform_http.c  logPlatform_http.h
